# django-starter

./: .env  .gitignore  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
django_project/: middlewares.py
django_project/settings/: __init__.py  common.py  development.py  production.py  util.py
static/css/: compiled.css
templates/: _base.html  form_snippet.html
templates/account/: login.html
