[tool.poetry]
name = "django-starter"
version = "0.1.0"
description = ""
authors = ["Csaba Okrona <ochronus@ochronus.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "^3.7.2"
certifi = "^2023.7.22"
cffi = "^1.15.1"
charset-normalizer = "^3.2.0"
crispy-bootstrap5 = "^0.7"
cryptography = "^41.0.6"
defusedxml = "^0.7.1"
django = "^4.2.4"
django-allauth = "^0.54.0"
django-crispy-forms = "^2.0"
django-debug-toolbar = "^4.2.0"
gunicorn = "^21.2.0"
idna = "^3.4"
oauthlib = "^3.2.2"
psycopg = "^3.1.10"
psycopg-binary = "^3.1.10"
pycparser = "^2.21"
pyjwt = "^2.8.0"
python3-openid = "^3.2.0"
requests = "^2.31.0"
requests-oauthlib = "^1.3.1"
sqlparse = "^0.4.4"
typing-extensions = "^4.7.1"
urllib3 = "^2.0.4"
whitenoise = "^6.5.0"
django-environ = "^0.10.0"
black = "^23.7.0"
environ = "^1.0"
django-widget-tweaks = "^1.4.12"
crispy-tailwind = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
